  `base_dir`.

- Added new `keep_comments_cpp` (`CCACHE_COMMENTS`) configuration option, which
  tells ccache not to discard the comments before hashing preprocessor output.
  This can be used to check documentation with *-Wdocumentation*.

- ccache now knows how to convert absolute paths to relative paths inside
  dependency files when using `base_dir`.


Bug fixes
~~~~~~~~~

- Fixed clang test suite when running on Linux.

- Fixed build and test for MinGW32 and Windows.


Unreleased 3.2.6
----------------

Bug fixes
~~~~~~~~~

- Fixed build problem on QNX, which lacks ``SA_RESTART''.

- Bail out on compiler option `-fstack-usage` since it creates a `.su` file
  which ccache currently doesn't handle.


ccache 3.2.5
------------
Release date: 2016-04-17


New features and improvements
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Only pass clang-specific `-stdlib=` to the preprocessor.

- Improved handling of stale NFS handles.

- Made it harder to misinterpret documentation of boolean environment settings'
  semantics.


Bug fixes
~~~~~~~~~

- Include m4 files used by configure.ac in the source dist archives.

- Corrected "Performance" section in the manual regarding `__DATE_`, `__TIME__`
  and `__FILE__` macros.

- Fixed build on Solaris 10+ and AIX 7.

- Fixed failure to create directories on QNX.

- Don't (try to) update manifest file in ``read-only'' and ``read-only direct''
  modes.

- Fixed a bug in caching of `stat` system calls in ``file_stat_matches
  sloppiness mode''.

- Fixed bug in hashing of clang plugins, leading to unnecessary cache misses.

- Fixed --print-config to show ``pch_defines sloppiness''.

- The man page is now built when running ``make install'' from Git repository
  sources.


ccache 3.2.4
------------
Release date: 2015-10-08


Bug fixes
~~~~~~~~~

- Fixed build error related to zlib on systems with older make versions
  (regression in ccache 3.2.3).

- Made conversion-to-bool explicit to avoid build warnings (and potential